# collader-guacamole

./: CMakeLists.txt  camera.cpp  camera.h  collader.cpp  collader.h  effect.cpp  effect.h  glcollader.cpp  idname.cpp  idname.h  image.cpp  image.h  library_cameras.cpp  library_effects.cpp  library_geometries.cpp  library_images.cpp  library_lights.cpp  library_materials.cpp  library_visual_scenes.cpp  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  newparam.cpp  newparam.h  node.cpp  node.h  scene.cpp  scene.h  sceneresourcer.cpp  sceneresourcer.h  simple.blend  simple.blend1  simple.dae  simpleMAT.dae  simpleTEX.dae  untitled.dae  version.txt
test/gltest/: CMakeLists.txt  datastructures.h  gltest.cpp  gltest.frag  gltest.vert  shaderutils.cpp  therenderer.h  thescene.cpp  thescene.h
test/glversiontest/: CMakeLists.txt  gltest.frag  glversiontest.cpp
test/resources/: simpledirectional.dae  trianglesimple.blend  trianglesimple.dae
test/simpletest/: CMakeLists.txt  colladertest.cpp
tinyxml2/: tinyxml2.cpp
